--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
   "name": "date-format",
-  "version": "0.0.2",
-  "description": "formatting Date objects as strings since 2013",
+  "version": "1.0.0",
+  "description": "Formatting Date objects as strings since 2013",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/nomiddlename/date-format.git"
+  },
+  "engines": {
+    "node": ">=4.0"
+  },
+  "scripts": {
+    "lint": "eslint lib/* test/*",
+    "pretest": "eslint lib/* test/*",
+    "test": "mocha"
   },
   "keywords": [
     "date",
     "format",
     "string"
   ],
-  "author": "Gareth Jones <gareth.jones@sensis.com.au>",
+  "author": "Gareth Jones <gareth.nomiddlename@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md",
   "gitHead": "bf59015ab6c9e86454b179374f29debbdb403522",
   "devDependencies": {
-    "should": "~1.2.2",
-    "mocha": "~1.12.0"
+    "eslint": "^3.12.0",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "eslint-plugin-mocha": "^4.8.0",
+    "mocha": "^3.2.0",
+    "should": "^11.1.2"
   }
 }
