--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,8 +27,11 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm version ${{ github.event.milestone.title }}
-      - run: git push && git push --tags
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          npm version ${{ github.event.milestone.title }}
+          git push && git push --tags
       
   publish-npm:
     needs: update-version
