--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "4.0.1",
   "description": "Formatting Date objects as strings since 2013",
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/nomiddlename/date-format.git"
