--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "lint": "eslint lib/* test/*",
     "pretest": "eslint lib/* test/*",
-    "test": "mocha"
+    "test": "nyc --check-coverage mocha"
   },
   "keywords": [
     "date",
@@ -31,6 +31,15 @@
     "eslint": "^8.7.0",
     "eslint-plugin-mocha": "^10.0.3",
     "mocha": "^9.1.4",
+    "nyc": "^15.1.0",
     "should": "^13.2.3"
+  },
+  "nyc": {
+    "include": [
+      "lib/**"
+    ],
+    "branches": 100,
+    "lines": 100,
+    "functions": 100
   }
 }
