Updated package.json to npm publish CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Formatting Date objects as strings since 2013",
   "main": "lib/index.js",
   "files": [
-    "lib"
+    "lib",
+    "CHANGELOG.md"
   ],
   "repository": {
     "type": "git",
