--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   "readmeFilename": "README.md",
   "gitHead": "bf59015ab6c9e86454b179374f29debbdb403522",
   "devDependencies": {
-    "eslint": "^8.16.0",
-    "eslint-plugin-mocha": "^10.0.5",
-    "mocha": "^10.0.0",
-    "nyc": "^15.1.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-mocha": "^4.12.1",
+    "mocha": "^5.2.0",
+    "nyc": "13.0.0",
     "should": "^13.2.3"
   },
   "nyc": {
