ci: added `npm audit` (except Node.js 4.x)

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,3 +36,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - if: ${{ matrix.npm != '5.x' }} 
+      run: npm audit
+      env:
+        NODE_ENV: production
