--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,6 +8,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch: {}
 
 jobs:
   build:
@@ -36,7 +37,3 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - if: ${{ matrix.npm != '5.x' }} 
-      run: npm audit
-      env:
-        NODE_ENV: production
