--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-mocha": "^10.1.0",
     "mocha": "^10.0.0",
-    "nyc": "13.0.0",
+    "nyc": "^15.1.0",
     "should": "^13.2.3"
   },
   "nyc": {
